--- a/makeanorder.html
+++ b/makeanorder.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strong food</title>
 </head>
+
 <body>
     <!-- header -->
     <header>
@@ -24,17 +26,32 @@
         </nav>
     </header>
     <hr>
-    
+
     <!-- main content -->
     <main>
         <!-- Your content -->
-
+        <article>
+            <section>
+                <h2>Make an order</h2>
+                <figure>
+                    <img src="img/delivery.png" alt="delivery">
+                </figure>
+            </section>
+            <section>
+                <form action="">
+                    <fieldset>
+                        
+                    </fieldset>
+                </form>
+            </section>
+        </article>
 
     </main>
     <hr>
-      <!-- footer  -->
+    <!-- footer  -->
     <footer>
         <p>Copyright &copy; strong food 2022.</p>
     </footer>
 </body>
+
 </html>
