--- a/makeanorder.html
+++ b/makeanorder.html
@@ -39,9 +39,17 @@
             </section>
             <section>
                 <form action="">
+                    <!-- pizza field  -->
                     <fieldset>
-                        
+                        <legend>Choose your favorite pizza</legend>
+                        <label><input type="checkbox" name="pizza" value="Chicken barbecue pizza">Chicken barbecue pizza</label>
+                        <label><input type="checkbox" name="pizza">Venezia pizza</label>
+                        <label><input type="checkbox" name="pizza">Garlic & steak pizza</label>
+                        <label><input type="checkbox" name="pizza">Margherita pizza</label>
+                        <label><input type="checkbox" name="pizza">Pepperoni pizza</label>
                     </fieldset>
+                    <br>
+
                 </form>
             </section>
         </article>
