--- a/makeanorder.html
+++ b/makeanorder.html
@@ -42,14 +42,21 @@
                     <!-- pizza field  -->
                     <fieldset>
                         <legend>Choose your favorite pizza</legend>
-                        <label><input type="checkbox" name="pizza" value="Chicken barbecue pizza">Chicken barbecue pizza</label>
-                        <label><input type="checkbox" name="pizza">Venezia pizza</label>
-                        <label><input type="checkbox" name="pizza">Garlic & steak pizza</label>
-                        <label><input type="checkbox" name="pizza">Margherita pizza</label>
-                        <label><input type="checkbox" name="pizza">Pepperoni pizza</label>
+                        <label><input type="radio" name="pizza" value="Chicken barbecue pizza">Chicken barbecue pizza</label><br>
+                        <label><input type="radio" name="pizza">Venezia pizza</label><br>
+                        <label><input type="radio" name="pizza">Garlic & steak pizza</label><br>
+                        <label><input type="radio" name="pizza">Margherita pizza</label><br>
+                        <label><input type="radio" name="pizza">Pepperoni pizza</label><br>
+
                     </fieldset>
                     <br>
-
+                    <!-- other -->
+                    <fieldset>
+                        <legend>Other</legend>
+                        <label><input type="radio" name="garlicbread">Garlic bread</label><br>
+                        <label><input type="radio" name="applecheese">Apple cheese</label><br>
+                    </fieldset>
+                    <br>
                 </form>
             </section>
         </article>
