--- a/makeanorder.html
+++ b/makeanorder.html
@@ -57,6 +57,14 @@
                         <label><input type="radio" name="applecheese">Apple cheese</label><br>
                     </fieldset>
                     <br>
+                    <fieldset>
+                        <legend>Drinks</legend>
+                        <label><input type="radio" name="soda">Sparkling Water</label><br>
+                        <label><input type="radio" name="soda">Coca</label><br>
+                        <label><input type="radio" name="soda">Fanta</label><br>
+                        <label><input type="radio" name="soda">Sprite</label><br>
+                        <label><input type="radio" name="soda">Pepsi</label><br>
+                    </fieldset>
                 </form>
             </section>
         </article>
