--- a/makeanorder.html
+++ b/makeanorder.html
@@ -38,25 +38,26 @@
                 </figure>
             </section>
             <section>
-                <form action="">
-                    <!-- pizza field  -->
+                <form>
+                    <!-- Pizza field  -->
                     <fieldset>
                         <legend>Choose your favorite pizza</legend>
-                        <label><input type="radio" name="pizza" value="Chicken barbecue pizza">Chicken barbecue pizza</label><br>
+                        <label><input type="radio" name="pizza" value="Chicken barbecue pizza">Chicken barbecue
+                            pizza</label><br>
                         <label><input type="radio" name="pizza">Venezia pizza</label><br>
                         <label><input type="radio" name="pizza">Garlic & steak pizza</label><br>
                         <label><input type="radio" name="pizza">Margherita pizza</label><br>
                         <label><input type="radio" name="pizza">Pepperoni pizza</label><br>
-
                     </fieldset>
                     <br>
-                    <!-- other -->
+                    <!-- Other -->
                     <fieldset>
                         <legend>Other</legend>
                         <label><input type="radio" name="garlicbread">Garlic bread</label><br>
                         <label><input type="radio" name="applecheese">Apple cheese</label><br>
                     </fieldset>
                     <br>
+                    <!-- Drinks field -->
                     <fieldset>
                         <legend>Drinks</legend>
                         <label><input type="radio" name="soda">Sparkling Water</label><br>
@@ -65,10 +66,21 @@
                         <label><input type="radio" name="soda">Sprite</label><br>
                         <label><input type="radio" name="soda">Pepsi</label><br>
                     </fieldset>
+                    <br>
+                    <!-- Information field -->
+                    <fieldset>
+                        <legend>Information</legend>
+                        <label>UserName: <input type="text"></label>
+                        <label>Password: <input type="password"></label>
+                        <br>
+                        <label>Address: <br><textarea name="address" cols="66" rows="5"></textarea></label>
+                        <br>
+                        <button type="submit">submit</button>
+                        <button type="reset">reset</button>
+                    </fieldset>
                 </form>
             </section>
         </article>
-
     </main>
     <hr>
     <!-- footer  -->
