add a Login image
I add a login image and resize login and sign up pages

--- a/LoginSignup.html
+++ b/LoginSignup.html
@@ -32,7 +32,7 @@
         <form action="">
             <fieldset>
                 <h3>sign up</h3>
-                <img src="/img/sign-up.png" alt="Signup"><br><br>
+                <img src="/img/sign-up.png" alt="Signup" width="500" height="200"><br><br>
                 <fieldset>
                     <label for="username">enter username:</label>
                     <input type="text" id="username" name="username" placeholder="username" required>
@@ -57,6 +57,13 @@
                     <br><br>
                 </fieldset><br>
                 <button>Sign up</button>
+                </fieldset><br>
+                <section>
+                    <fieldset>
+                        <h3>Login</h3>
+                        <img src="/img/Login.png" alt="Login" width="500" height="200">
+                    </fieldset>
+                </section>
 
         </form>
     </main>
