Add Login Section
I add login section and fix some issues

--- a/LoginSignup.html
+++ b/LoginSignup.html
@@ -62,6 +62,18 @@
                     <fieldset>
                         <h3>Login</h3>
                         <img src="/img/Login.png" alt="Login" width="500" height="200">
+                    
+                    <fieldset>
+                        <form action="">
+                            <h3>Login</h3>
+                            <label for="username">enter username:</label>
+                            <input type="text" id="username" name="username" placeholder="username" required>
+                            <br><br>
+                            <label for="pasword">password:</label>
+                            <input type="password" id="password" name="password" placeholder="choose a password" required>
+                            <br><br>
+                            <button>Login</button>
+                    </fieldset>
                     </fieldset>
                 </section>
 
