fix boarder issue
fix border issue an make code prettier

--- a/LoginSignup.html
+++ b/LoginSignup.html
@@ -20,7 +20,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="makeanorder.html">Make an order</a></li>
-                <li><a href="login.html">Login / SignUp</a></li>
+                <li><a href="LoginSignup.html">Login / SignUp</a></li>
                 <li><a href="aboutus.html">About us</a></li>
             </ul>
         </nav>
@@ -31,29 +31,29 @@
     <main>
         <form action="">
             <fieldset>
-                <h3>sign up</h3>
+                <h3>Sign up</h3>
                 <img src="/img/sign-up.png" alt="Signup" width="500" height="200"><br><br>
                 <fieldset>
-                    <label for="username">enter username:</label>
+                    <label for="username">Enter username:</label>
                     <input type="text" id="username" name="username" placeholder="username" required>
                     <br><br>
-                    <label for="email">enter email:</label>
+                    <label for="email">Enter email:</label>
                     <input type="email" id="email" name="email" placeholder="your email" required>
                     <br><br>
-                    <label for="pasword">password:</label>
+                    <label for="pasword">Password:</label>
                     <input type="password" id="password" name="password" placeholder="choose a password" required>
                     <br><br>
                     <input type="date" id="birth">
-                    <label for="birth">enter your birth date</label>
+                    <label for="birth">Enter your birth date</label>
                     <br><br>
                     <label for="number">Secrurity Question:</label><br><br>
                     <input type="number" id="number" placeholder="enter your favorite number">
                     <br><br>
                     <input type="radio" id="accept">
-                    <label for="accept">agree to our privacy policy ?</label>
+                    <label for="accept">Agree to our privacy policy ?</label>
                     <br><br>
                     <input type="checkbox" id="sendemail">
-                    <label for="sendemail">do you like to get news by email ?</label>
+                    <label for="sendemail">Do you like to get news by email ?</label>
                     <br><br>
                 </fieldset><br>
                 <button>Sign up</button>
@@ -66,14 +66,14 @@
                     <fieldset>
                         <form action="">
                             <h3>Login</h3>
-                            <label for="username">enter username:</label>
+                            <label for="username">Enter Username:</label>
                             <input type="text" id="username" name="username" placeholder="username" required>
                             <br><br>
-                            <label for="pasword">password:</label>
-                            <input type="password" id="password" name="password" placeholder="choose a password" required>
+                            <label for="Password">password:</label>
+                            <input type="Password" id="Password" name="Password" placeholder="Choose a Password" required>
                             <br><br>
                             <button>Login</button>
-                    </fieldset>
+                    </fieldset><br>
                     </fieldset>
                 </section>
 
