Add make us better section
I add make us better to this page

--- a/aboutus.html
+++ b/aboutus.html
@@ -43,6 +43,24 @@
                 </ul>
             </Fieldset>
         </section>
+
+        <section>
+            <br>
+            <fieldset>
+                <legend>
+                    <h3>Make Us Better</h3>
+                </legend>
+        
+                <p>For Having The Better Service Please Answer These Folowing Question :</p>
+                <label for="Q1">What did you think about our food?</label>
+                <input type="text" name="Q1" id="Q1" placeholder="Type Somthing"><br><br>
+                <label for="Q2">Did you find anything missing from the menu?</label>
+                <input type="text" name="Q2" id="Q2" placeholder="Type Somthing"><br><br>
+                <label for="Q3">How would you rate the reservation process?</label>
+                <input type="text" name="Q3" id="Q3" placeholder="Type Somthing"><br><br>
+            </fieldset>
+        </section>
+        
             </main>
             <hr>
             <!-- footer  -->
