Add make us better
I added make us better section

--- a/aboutus.html
+++ b/aboutus.html
@@ -60,7 +60,15 @@
                 <input type="text" name="Q3" id="Q3" placeholder="Type Somthing"><br><br>
             </fieldset>
         </section>
-        
+        <section>
+            <fieldset>
+                <legend>
+                    <h3>Any Other Suggestion?</h3>
+                </legend>
+                <textarea name="Suggest" id="Suggest" cols="30" rows="10" placeholder="Type Something"></textarea>
+            </fieldset>
+        </section>
+
             </main>
             <hr>
             <!-- footer  -->
