add the links in the pages of our projeckt

--- a/aboutus.html
+++ b/aboutus.html
@@ -16,13 +16,15 @@
             <h1>Stronge Food</h1>
         </section>
         <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="makeanorder.html">Make an order</a></li>
-                <li><a href="login.html">Login / SignUp</a></li>
-                <li><a href="aboutus.html">About us</a></li>
-            </ul>
+            
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="makeanorder.html">Make an order</a></li>
+                    <li><a href="LoginSignup.html">Login / SignUp</a></li>
+                    <li><a href="aboutus.html">About us</a></li>
+                </ul>
+            
         </nav>
     </header>
     <hr>
