--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <h1>Stronge Food</h1>
         </section>
         <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
+                <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a href="#">Make an order</a></li>
-                <li><a href="login.html">Login / SignUp</a></li>
+                <li><a href="makeanorder.html">Make an order</a></li>
+                <li><a href="LoginSignup.html">Login / SignUp</a></li>
                 <li><a href="aboutus.html">About us</a></li>
             </ul>
         </nav>
@@ -74,7 +74,7 @@
             <articl>
                 <a href="makeanorder.html">order now</a>
                 <a href="#">watch our menu</a>
-                <a href="#">contact us</a>
+                <a href="aboutus.html">contact us</a>
 
             </articl>
         </section>
