--- a/LoginSignup.html
+++ b/LoginSignup.html
@@ -17,7 +17,7 @@
         </section>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="makeanorder.html">Make an order</a></li>
                 <li><a href="LoginSignup.html">Login / SignUp</a></li>
