--- a/LoginSignup.html
+++ b/LoginSignup.html
@@ -32,7 +32,7 @@
         <form action="">
             <fieldset>
                 <h3>Sign up</h3>
-                <img src="/img/sign-up.png" alt="Signup" width="500" height="200"><br><br>
+                <img src="img/sign-up.png" alt="Signup" width="500" height="200"><br><br>
                 <fieldset>
                     <label for="username">Enter username:</label>
                     <input type="text" id="username" name="username" placeholder="username" required>
@@ -61,7 +61,7 @@
                 <section>
                     <fieldset>
                         <h3>Login</h3>
-                        <img src="/img/Login.png" alt="Login" width="500" height="200">
+                        <img src="img/Login.png" alt="Login" width="500" height="200">
                     
                     <fieldset>
                         <form action="">
