--- a/Menu.html
+++ b/Menu.html
@@ -9,6 +9,21 @@
 </head>
 
 <body>
+    <header>
+        <section>
+            <!-- head -->
+            <h1>Stronge Food</h1>
+        </section>
+        <nav>
+                <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Menu.html">Menu</a></li>
+                <li><a href="makeanorder.html">Make an order</a></li>
+                <li><a href="LoginSignup.html">Login / SignUp</a></li>
+                <li><a href="aboutus.html">About us</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1>Strong food restaurant menu</h1>
     <hr>
     <hr>
@@ -61,6 +76,9 @@
         <summary>Contents:</summary>
         Pepperoni, special sauce, mixed cheese, Italian spices, pepperoni
     </details>
+    <footer>
+        <p>Copyright &copy; strong food 2022.</p>
+    </footer>
 
 </body>
 
