--- a/makeanorder.html
+++ b/makeanorder.html
@@ -17,10 +17,10 @@
         </section>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="#">Make an order</a></li>
-                <li><a href="login.html">Login / SignUp</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Menu.html">Menu</a></li>
+                <li><a href="makeanorder.html">Make an order</a></li>
+                <li><a href="LoginSignup.html">Login / SignUp</a></li>
                 <li><a href="aboutus.html">About us</a></li>
             </ul>
         </nav>
@@ -54,7 +54,7 @@
                     <fieldset>
                         <legend>Other</legend>
                         <label><input type="radio" name="garlicbread">Garlic bread</label><br>
-                        <label><input type="radio" name="applecheese">Apple cheese</label><br>
+                        <label><input type="radio" name="applecheese">Potato cheese</label><br>
                     </fieldset>
                     <br>
                     <!-- Drinks field -->
