I added the photos

--- a/Menu.html
+++ b/Menu.html
@@ -55,13 +55,10 @@
         Pepperoni, special sauce, mixed cheese, Italian spices, pepperoni
     </details>
     <hr>
-    <h2>Pepperoni pizza</h2>
-    <img src="/img/پپرونی.jpg">
-    <details>
-        <summary>Contents:</summary>
-        Pepperoni, special sauce, mixed cheese, Italian spices, pepperoni
-    </details>
-
+    <h2>Garlic bread</h2>
+    <img src="/img/نان سیر.jpg">
+    <hr>
+    <h2>Potato cheese</h2>
+    <img src="/img/سیب و پنیر.jpg">
 </body>
-
 </html>
