--- a/LoginSignup.html
+++ b/LoginSignup.html
@@ -17,8 +17,8 @@
         </section>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Menu.html">Menu</a></li>
                 <li><a href="makeanorder.html">Make an order</a></li>
                 <li><a href="LoginSignup.html">Login / SignUp</a></li>
                 <li><a href="aboutus.html">About us</a></li>
