--- a/aboutus.html
+++ b/aboutus.html
@@ -17,10 +17,10 @@
         </section>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Menu.html">Menu</a></li>
                 <li><a href="makeanorder.html">Make an order</a></li>
-                <li><a href="login.html">Login / SignUp</a></li>
+                <li><a href="LoginSignup.html">Login / SignUp</a></li>
                 <li><a href="aboutus.html">About us</a></li>
             </ul>
         </nav>
@@ -31,7 +31,7 @@
     <main>
         <section>
             <Fieldset>
-                <img src="/img/team.png" alt="Team Photo" width="325" height="200">
+                <img src="img/team.png" alt="Team Photo" width="325" height="200">
                 <legend>
                     <h3>Our Team</h3>
                 </legend>
