--- a/Menu.html
+++ b/Menu.html
@@ -14,44 +14,44 @@
     <hr>
     <br><br>
     <h2>Chicken barbecue pizza</h2>
-    <img src="/img/Chicken barbecue.jpg">
+    <img src="./img/Chicken barbecue.jpg">
     <details>
         <summary>Contents:</summary>
         Special sauce, mixed cheese, mushrooms, bell pepper, Italian spices, olives, marinated chicken breast
     </details>
     <hr>
     <h2>Venezia pizza</h2>
-    <img src="/img/Venezia.jpg">
+    <img src="./img/Venezia.jpg">
     <details>
         <summary>Contents:</summary>
         Special sauce, mixed cheese, Italian spices, marinated veal fillet, pepperoni
     </details>
     <hr>
     <h2>Garlic & steak pizza</h2>
-    <img src="/img/Garlic & steak.jpg">
+    <img src="./img/Garlic & steak.jpg">
     <details>
         <summary>Contents:</summary>
         Special sauce, mixed cheese, Italian spices, onion rings, 150 grams of marinated veal fillet
     </details>
     <hr>
     <h2>Margherita pizza</h2>
-    <img src="/img/Margherita.jpg">
+    <img src="./img/Margherita.jpg">
     <details>
         <summary>Contents:</summary>
         special sauce, special Italian cheese, tomato, aromatic vegetable, thyme
     </details>
     <hr>
     <h2>Pepperoni pizza</h2>
-    <img src="/img/Pepperoni.jpg">
+    <img src="./img/Pepperoni.jpg">
     <details>
         <summary>Contents:</summary>
         Pepperoni, special sauce, mixed cheese, Italian spices, pepperoni
     </details>
     <hr>
     <h2>Garlic bread</h2>
-    <img src="/img/Garlic bread.jpg">
+    <img src="./img/Garlic bread.jpg">
     <hr>
     <h2>Potato cheese</h2>
-    <img src="/img/potato cheese.jpg">
+    <img src="./img/potato cheese.jpg">
 </body>
 </html>
