--- a/Menu.html
+++ b/Menu.html
@@ -9,49 +9,74 @@
 </head>
 
 <body>
-    <h1>Strong food restaurant menu</h1>
+    <!-- header -->
+    <header>
+        <section>
+            <!-- head -->
+            <h1>Stronge Food</h1>
+        </section>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Menu.html">Menu</a></li>
+                <li><a href="makeanorder.html">Make an order</a></li>
+                <li><a href="LoginSignup.html">Login / SignUp</a></li>
+                <li><a href="aboutus.html">About us</a></li>
+            </ul>
+        </nav>
+    </header>
     <hr>
+
+    <!-- main  -->
+    <main>
+        <h2>Strong food restaurant menu</h2>
+        <br><br>
+        <h3>Chicken barbecue pizza</h3>
+        <img src="./img/Chicken barbecue.jpg">
+        <details>
+            <summary>Contents:</summary>
+            Special sauce, mixed cheese, mushrooms, bell pepper, Italian spices, olives, marinated chicken breast
+        </details>
+        <hr>
+        <h3>Venezia pizza</h3>
+        <img src="./img/Venezia.jpg">
+        <details>
+            <summary>Contents:</summary>
+            Special sauce, mixed cheese, Italian spices, marinated veal fillet, pepperoni
+        </details>
+        <hr>
+        <h3>Garlic & steak pizza</h3>
+        <img src="./img/Garlic & steak.jpg">
+        <details>
+            <summary>Contents:</summary>
+            Special sauce, mixed cheese, Italian spices, onion rings, 150 grams of marinated veal fillet
+        </details>
+        <hr>
+        <h3>Margherita pizza</h3>
+        <img src="./img/Margherita.jpg">
+        <details>
+            <summary>Contents:</summary>
+            special sauce, special Italian cheese, tomato, aromatic vegetable, thyme
+        </details>
+        <hr>
+        <h3>Pepperoni pizza</h3>
+        <img src="./img/Pepperoni.jpg">
+        <details>
+            <summary>Contents:</summary>
+            Pepperoni, special sauce, mixed cheese, Italian spices, pepperoni
+        </details>
+        <hr>
+        <h3>Garlic bread</h3>
+        <img src="./img/Garlic bread.jpg">
+        <hr>
+        <h3>Potato cheese</h3>
+        <img src="./img/potato cheese.jpg">
+    </main>
     <hr>
-    <br><br>
-    <h2>Chicken barbecue pizza</h2>
-    <img src="./img/Chicken barbecue.jpg">
-    <details>
-        <summary>Contents:</summary>
-        Special sauce, mixed cheese, mushrooms, bell pepper, Italian spices, olives, marinated chicken breast
-    </details>
-    <hr>
-    <h2>Venezia pizza</h2>
-    <img src="./img/Venezia.jpg">
-    <details>
-        <summary>Contents:</summary>
-        Special sauce, mixed cheese, Italian spices, marinated veal fillet, pepperoni
-    </details>
-    <hr>
-    <h2>Garlic & steak pizza</h2>
-    <img src="./img/Garlic & steak.jpg">
-    <details>
-        <summary>Contents:</summary>
-        Special sauce, mixed cheese, Italian spices, onion rings, 150 grams of marinated veal fillet
-    </details>
-    <hr>
-    <h2>Margherita pizza</h2>
-    <img src="./img/Margherita.jpg">
-    <details>
-        <summary>Contents:</summary>
-        special sauce, special Italian cheese, tomato, aromatic vegetable, thyme
-    </details>
-    <hr>
-    <h2>Pepperoni pizza</h2>
-    <img src="./img/Pepperoni.jpg">
-    <details>
-        <summary>Contents:</summary>
-        Pepperoni, special sauce, mixed cheese, Italian spices, pepperoni
-    </details>
-    <hr>
-    <h2>Garlic bread</h2>
-    <img src="./img/Garlic bread.jpg">
-    <hr>
-    <h2>Potato cheese</h2>
-    <img src="./img/potato cheese.jpg">
+    <!-- footer  -->
+    <footer>
+        <p>Copyright &copy; strong food 2022.</p>
+    </footer>
 </body>
+
 </html>
