--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
             <tr>
                 <th>
         <figure><img src="img/fast_food_zinger_burger_poster_4x.jpg" alt="fast food photo"height=300px>
-            <figcaption><a href="#">fast food</a></figcaption>
+            <figcaption><a href="Menu.html">fast food</a></figcaption>
         </figure></th>
    
        <th> <figure>
             <img src="img/mexican-food-menu-mini-posters-vector-7880238.jpg" alt="ethnic food"height=300px>
-            <figcaption><a href="#">ethnic food</a></figcaption>
+            <figcaption><a href="Menu.html">ethnic food</a></figcaption>
         </figure></th>
         <th>
         <figure>
             <img src="img/coffee-poster-for-restaurant-and-cafe-vector-13518950.jpg" alt="cafe"height=300px>
-            <figcaption><a href="#">cafe</a></figcaption>
+            <figcaption><a href="Menu.html">cafe</a></figcaption>
         </figure></th>
      </tr>
 </thead>
