--- a/makeanorder.html
+++ b/makeanorder.html
@@ -42,29 +42,44 @@
                     <!-- Pizza field  -->
                     <fieldset>
                         <legend>Choose your favorite pizza</legend>
-                        <label><input type="radio" name="pizza" value="Chicken barbecue pizza">Chicken barbecue
+                        <label><input type="checkbox" name="pizza" value="Chicken barbecue pizza">Chicken barbecue
                             pizza</label><br>
-                        <label><input type="radio" name="pizza">Venezia pizza</label><br>
-                        <label><input type="radio" name="pizza">Garlic & steak pizza</label><br>
-                        <label><input type="radio" name="pizza">Margherita pizza</label><br>
-                        <label><input type="radio" name="pizza">Pepperoni pizza</label><br>
+                        <label><input type="checkbox" name="pizza">Venezia pizza</label><br>
+                        <label><input type="checkbox" name="pizza">Garlic & steak pizza</label><br>
+                        <label><input type="checkbox" name="pizza">Margherita pizza</label><br>
+                        <label><input type="checkbox" name="pizza">Pepperoni pizza</label><br>
                     </fieldset>
                     <br>
+                    <!-- cafe field -->
+                    <fieldset>
+                    <legend>cafe</legend>
+                    <label><input type="checkbox" name="cafe" value="latte">latte</label><br>
+                    <label><input type="checkbox" name="cafe">shake</label><br>
+                    <label><input type="checkbox" name="cafe">hot chocolate</label><br>
+                    <label><input type="checkbox" name="cafe">cafe</label><br>
+                    <br></fieldset>
+                    <!-- ethnic field -->
+                    <fieldset>
+                    <legend>ethnic</legend>
+                    <label><input type="checkbox" name="ethnic">taco</label><br>
+                    <label><input type="checkbox" name="ethnic">sushi</label><br>
+                    <label><input type="checkbox" name="ethnic">borito</label><br>
+                </fieldset>
                     <!-- Other -->
                     <fieldset>
                         <legend>Other</legend>
-                        <label><input type="radio" name="garlicbread">Garlic bread</label><br>
-                        <label><input type="radio" name="applecheese">Potato cheese</label><br>
+                        <label><input type="checkbox" name="garlicbread">Garlic bread</label><br>
+                        <label><input type="checkbox" name="applecheese">Apple cheese</label><br>
                     </fieldset>
                     <br>
                     <!-- Drinks field -->
                     <fieldset>
                         <legend>Drinks</legend>
-                        <label><input type="radio" name="soda">Sparkling Water</label><br>
-                        <label><input type="radio" name="soda">Coca</label><br>
-                        <label><input type="radio" name="soda">Fanta</label><br>
-                        <label><input type="radio" name="soda">Sprite</label><br>
-                        <label><input type="radio" name="soda">Pepsi</label><br>
+                        <label><input type="checkbox" name="soda">Sparkling Water</label><br>
+                        <label><input type="checkbox" name="soda">Coca</label><br>
+                        <label><input type="checkbox" name="soda">Fanta</label><br>
+                        <label><input type="checkbox" name="soda">Sprite</label><br>
+                        <label><input type="checkbox" name="soda">Pepsi</label><br>
                     </fieldset>
                     <br>
                     <!-- Information field -->
