--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
     <label for="other">other</label>
     <input type="radio" id="other" name="ocation">
     <br>
-    <button>submit</button>
+    <button>submit</button>\
+    <br>
+    <p>we wish you the best</p>
     </form>
     </main>
     <!-- aside  -->
